--- a/introuge.html
+++ b/introuge.html
@@ -9,7 +9,31 @@
 </head>
 
 <body>
-
+    <header>
+        <nav class="navbar">
+            <a href="index.html">Første semester på KEA</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a class="nav-link" href="mig.html">Om mig</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="introuge.html">Introuge</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="web.html">Web</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ux.html">UX</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="animation.html">Animation</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="indhold.html">Indhold</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
