--- a/mig.html
+++ b/mig.html
@@ -5,32 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
+
+    <link rel="stylesheet" href="style.css">
     <title>Om mig</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar">
+        <div class="logo">
             <a href="index.html">Første semester på KEA</a>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a class="nav-link" href="mig.html">Om mig</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="introuge.html">Introuge</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="web.html">Web</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ux.html">UX</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="animation.html">Animation</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="indhold.html">Indhold</a>
-                </li>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="mig.html">Om mig</a></li>
+                <li><a href="introuge.html">Introuge</a></li>
+                <li><a href="web.html">Web</a></li>
+                <li><a href="ux.html">UX</a></li>
+                <li><a href="animation.html">Animation</a></li>
+                <li><a href="indhold.html">Indhold</a></li>
             </ul>
         </nav>
     </header>
