--- a/mig.html
+++ b/mig.html
@@ -28,6 +28,22 @@
             </ul>
         </nav>
     </header>
+
+    <h1> Louise Krejler</h1>
+    <div class="mig_picture">
+        <img src="img/IMG_0082.webp" alt="mig">
+    </div>
+    <div class="two_columns">
+        <div>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis nostrum voluptatibus
+                autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo. Saepe
+                dicta magnam porro!</p>
+        </div>
+        <div class="lulu_picture">
+            <img src="img/IMG_6780.webp" alt="mig og maclulu">
+        </div>
+    </div>
+
 </body>
 
 </html>
