styling af om mig side

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1>Første semester<br>på KEA</h1>
             </div>
         </section>
-        <h2>Louise Krejler
+        <h2 class="h2_forside">Louise Krejler
         </h2>
     </main>
 
