--- a/mig.html
+++ b/mig.html
@@ -29,12 +29,13 @@
         </nav>
     </header>
 
-    <h1> Louise Krejler</h1>
+    <h1 class="h1_mig"> Louise Krejler</h1>
     <div class="mig_picture">
         <img src="img/IMG_0082.webp" alt="mig">
     </div>
+    <h2 class="h2_mig">Lidt om mig</h2>
     <div class="two_columns">
-        <div>
+        <div class="column1">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis nostrum voluptatibus
                 autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo. Saepe
                 dicta magnam porro!</p>
