layout til portfolie sider (med random billeder)

--- a/introuge.html
+++ b/introuge.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
-
     <link rel="stylesheet" href="style.css">
     <title>Introuge</title>
 </head>
@@ -28,6 +27,22 @@
             </ul>
         </nav>
     </header>
+    <h1 class="portfolie_h1">Introuge</h1>
+    <div class="grid_4col_1-1-1-1">
+        <img class="image1" src="img/video.png" alt="desktop-setup" />
+        <img class="image2" src="img/apple-84.webp" alt="apple-84" />
+        <img class="image3" src="img/intel-chip.webp" alt="intel-chip" />
+        <img class="image4" src="img/xd.png" alt="code" />
+    </div>
+    <h2 class="h2_mig">Mit arbejde</h2>
+    <div class="two_columns">
+        <div class="column1">
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis nostrum voluptatibus
+                autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo. Saepe
+                dicta magnam porro!</p>
+        </div>
+        <div>
+        </div>
 </body>
 
 </html>
