--- a/ux.html
+++ b/ux.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
     </header>
-    <h1 class="portfolie_h1">UX</h1>
+    <h1 class="portfolie_h1">Grundlæggende UX</h1>
     <div class="grid_4col_1-1-1-1">
         <img class="image1" src="img/kode.png" alt="desktop-setup" />
         <img class="image2" src="img/apple-84.webp" alt="apple-84" />
