ændring af class på h1 og h2

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section>
-            <div class="h1_section">
+            <div class="h1_forside">
                 <h1>Første semester<br>på KEA</h1>
             </div>
         </section>
