--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 
 <body class="bodyindex">
     <header>
-        <div class="logo">
-            <a href="index.html">Første semester på KEA</a>
-        </div>
         <nav>
             <ul class="menu">
+                <li style="float:left"> <a href="index.html">Første semester på KEA</a></li>
                 <li><a href="mig.html">Om mig</a></li>
                 <li><a href="introuge.html">Introuge</a></li>
                 <li><a href="web.html">Web</a></li>
@@ -38,6 +36,7 @@
         </h2>
     </main>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
