--- a/mig.html
+++ b/mig.html
@@ -14,11 +14,9 @@
 
 <body>
     <header>
-        <div class="logo">
-            <a href="index.html">Første semester på KEA</a>
-        </div>
         <nav>
             <ul class="menu">
+                <li style="float:left"> <a href="index.html">Første semester på KEA</a></li>
                 <li><a href="mig.html">Om mig</a></li>
                 <li><a href="introuge.html">Introuge</a></li>
                 <li><a href="web.html">Web</a></li>
@@ -29,22 +27,28 @@
         </nav>
     </header>
 
-    <h1 class="h1_portfolie"> Louise Krejler</h1>
-    <div class="mig_picture">
-        <img src="img/IMG_0082.webp" alt="mig">
-    </div>
-    <h2 class="h2_portfolie">Lidt om mig</h2>
-    <div class="two_columns">
-        <div class="column1">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis nostrum voluptatibus
-                autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo. Saepe
-                dicta magnam porro!</p>
+    <main>
+        <h1 class="h1_portfolie"> Louise Krejler</h1>
+        <div class="mig_picture">
+            <img src="img/IMG_0082.webp" alt="mig">
         </div>
-        <div class="lulu_picture">
-            <img src="img/IMG_6780.webp" alt="mig og maclulu">
+        <h2 class="h2_portfolie">Lidt om mig</h2>
+        <div class="two_columns">
+            <div class="column1">
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis nostrum voluptatibus
+                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
+                    Saepe
+                    dicta magnam porro!</p>
+            </div>
+            <div class="lulu_picture">
+                <img src="img/IMG_6780.webp" alt="mig og maclulu">
+            </div>
         </div>
-    </div>
+    </main>
 
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
