--- a/introuge.html
+++ b/introuge.html
@@ -13,11 +13,9 @@
 
 <body>
     <header>
-        <div class="logo">
-            <a href="index.html">Første semester på KEA</a>
-        </div>
         <nav>
             <ul class="menu">
+                <li style="float:left"> <a href="index.html">Første semester på KEA</a></li>
                 <li><a href="mig.html">Om mig</a></li>
                 <li><a href="introuge.html">Introuge</a></li>
                 <li><a href="web.html">Web</a></li>
@@ -44,6 +42,8 @@
         <div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
