--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
-
     <link rel="stylesheet" href="style.css">
     <title>Forside</title>
 </head>
 
-<body class="bodyindex">
+<body>
     <header>
         <nav>
             <ul class="menu">
@@ -26,15 +25,13 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
-            <div class="h1_forside">
-                <h1>Første semester<br>på KEA</h1>
-            </div>
-        </section>
-        <h2 class="h2_forside">Louise Krejler
-        </h2>
-    </main>
+    <section>
+        <div class="h1_forside">
+            <h1>Første semester<br>på KEA</h1>
+        </div>
+    </section>
+    <h2 class="h2_forside">Louise Krejler
+    </h2>
 
     <script src="script.js"></script>
 </body>
