--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <nav>
             <ul class="menu">
                 <li style="float:left"> <a href="index.html">Første semester på KEA</a></li>
-                <li><a href="mig.html">Om mig</a></li>
-                <li><a href="introuge.html">Introuge</a></li>
-                <li><a href="web.html">Web</a></li>
-                <li><a href="ux.html">UX</a></li>
-                <li><a href="animation.html">Animation</a></li>
-                <li><a href="indhold.html">Indhold</a></li>
+                <nav class="menu_højre">
+                    <li><a href="mig.html">Om mig</a></li>
+                    <li><a href="introuge.html">Introuge</a></li>
+                    <li><a href="web.html">Web</a></li>
+                    <li><a href="ux.html">UX</a></li>
+                    <li><a href="animation.html">Animation</a></li>
+                    <li><a href="indhold.html">Indhold</a></li>
+                </nav>
             </ul>
         </nav>
     </header>
@@ -30,8 +32,13 @@
             <h1>Første semester<br>på KEA</h1>
         </div>
     </section>
-    <h2 class="h2_forside">Louise Krejler
-    </h2>
+    <div class="h2_forside">
+        <h2>Louise Krejler</h2>
+    </div>
+
+
+
+
 
     <script src="script.js"></script>
 </body>
