--- a/introuge.html
+++ b/introuge.html
@@ -16,12 +16,14 @@
         <nav>
             <ul class="menu">
                 <li style="float:left"> <a href="index.html">Første semester på KEA</a></li>
-                <li><a href="mig.html">Om mig</a></li>
-                <li><a href="introuge.html">Introuge</a></li>
-                <li><a href="web.html">Web</a></li>
-                <li><a href="ux.html">UX</a></li>
-                <li><a href="animation.html">Animation</a></li>
-                <li><a href="indhold.html">Indhold</a></li>
+                <nav class="menu_højre">
+                    <li><a href="mig.html">Om mig</a></li>
+                    <li><a href="introuge.html">Introuge</a></li>
+                    <li><a href="web.html">Web</a></li>
+                    <li><a href="ux.html">UX</a></li>
+                    <li><a href="animation.html">Animation</a></li>
+                    <li><a href="indhold.html">Indhold</a></li>
+                </nav>
             </ul>
         </nav>
     </header>
