--- a/ux.html
+++ b/ux.html
@@ -14,17 +14,17 @@
 
 <body>
     <header>
+        <div class="logo">
+            <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
+        </div>
         <nav>
             <ul class="menu">
-                <li style="float:left"> <a href="index.html">Første semester på KEA</a></li>
-                <nav class="menu_højre">
-                    <li><a href="indhold.html">Indhold</a></li>
-                    <li><a href="animation.html">Animation</a></li>
-                    <li><a href="ux.html">UX</a></li>
-                    <li><a href="web.html">Web</a></li>
-                    <li><a href="introuge.html">Introuge</a></li>
-                    <li><a href="mig.html">Om mig</a></li>
-                </nav>
+                <li><a href="mig.html" class="mig_menu">Om mig</a></li>
+                <li><a href="introuge.html" class="intro_menu">Introuge</a></li>
+                <li><a href="web.html" class="web_menu">Web</a></li>
+                <li><a href="ux.html" class="ux_menu">UX</a></li>
+                <li><a href="animation.html" class="animation_menu">Animation</a></li>
+                <li><a href="indhold.html" class="indhold_menu">Indhold</a></li>
             </ul>
         </nav>
     </header>
