--- a/mig.html
+++ b/mig.html
@@ -29,17 +29,25 @@
     </header>
 
     <main>
-        <h1 class="h1_portfolie"> Louise Krejler</h1>
-        <div class="mig_picture">
-            <img src="img/IMG_0082.webp" alt="mig">
+        <div class="scrolling_text">
+            <div class="scrolling_text_inner_mig">
+                LOUISE KREJLER
+            </div>
         </div>
         <h2 class="h2_portfolie">Lidt om mig</h2>
         <div class="two_columns">
             <div class="column1">
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis nostrum voluptatibus
-                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
-                    Saepe
-                    dicta magnam porro!</p>
+                <p> Jeg hedder Louise og jeg er 22 år gammel. Jeg kommer fra Ballerup, men min mor valgte at vi skulle
+                    flytte til Gentofte da jeg gik i tiende klasse på efterskolen. Jeg gik derfor på Aurehøj Gymnasium
+                    og holdte derefter 2 gode sabbatår. Her arbejdede jeg på et håndarbejdsværksted for mennesker med
+                    nedsat funktionsevne. Der var fyldt med søde mennesker og jeg lærte rigtig meget af, at være der. I
+                    mellemtiden flyttede jeg hjemmefra til Valby i en lille 1 værelses. Efterfølgende er jeg flyttet til
+                    Amager og startede på Multimediedesigner her til august. Jeg har fået et studiejob på Jobindex hvor
+                    jeg hjælper med at designe deres jobannoncer. Her er jeg omringet af flere som er uddannet
+                    multimediedesigner og andre i samme slags branche. Det er helt vildt fedt at få lov til at få noget
+                    relevant sparring med dem og lære hvordan jeg kan bruge alt det jeg har lært i praksis. Udover det
+                    så elsker jeg at være sammen med mine venner. Ligegyldigt hvad vi laver hygger jeg mig altid med
+                    mine søde veninder. De er de vigtigste i mit liv, udover min familie hihi</p>
             </div>
             <div class="lulu_picture">
                 <img src="img/IMG_6780.webp" alt="mig og maclulu">
