ny layout portfolie sider

--- a/web.html
+++ b/web.html
@@ -34,13 +34,7 @@
                 GRUNDLÆGGENDE WEB
             </div>
         </div>
-
-        <div class="grid_4col_1-1-1-1">
-            <img class="image1" src="img/kode.png" alt="desktop-setup" />
-            <img class="image2" src="img/apple-84.webp" alt="apple-84" />
-            <img class="image3" src="img/intel-chip.webp" alt="intel-chip" />
-            <img class="image4" src="img/xd.png" alt="code" />
-        </div>
+        <img class="portfolie_img" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
         <h2 class="h2_portfolie">Mit arbejde</h2>
         <div class="two_columns">
             <div class="column1">
