margin top mig side

--- a/mig.html
+++ b/mig.html
@@ -34,7 +34,7 @@
                 LOUISE KREJLER
             </div>
         </div>
-        <h2 class="h2_portfolie">Lidt om mig</h2>
+        <h2 class="h2_mig">Lidt om mig</h2>
         <div class="two_columns">
             <div class="column1">
                 <p> Jeg hedder Louise og jeg er 22 år gammel. Jeg kommer fra Ballerup, men min mor valgte at vi skulle
