--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
         <nav>
             <ul class="menu">
-                <li><a href="mig.html" class="mig_menu">Om mig</a></li>
-                <li><a href="web.html" class="web_menu">Web</a></li>
-                <li><a href="ux.html" class="ux_menu">UX</a></li>
-                <li><a href="animation.html" class="animation_menu">Animation</a></li>
-                <li><a href="indhold.html" class="indhold_menu">Indhold</a></li>
+                <li><a href="#mig" class="mig_menu">Om mig</a></li>
+                <li><a href="#web" class="web_menu">Web</a></li>
+                <li><a href="#ux" class="ux_menu">UX</a></li>
+                <li><a href="#animation" class="animation_menu">Animation</a></li>
+                <li><a href="#indhold" class="indhold_menu">Indhold</a></li>
             </ul>
         </nav>
     </header>
@@ -34,6 +34,106 @@
     <div class="h2_forside">
         <h2>Louise Krejler</h2>
     </div>
+
+
+    <div class="scroll">
+        <div id="mig" class="scrolling_text_forside reveal">
+            <div class="scrolling_text_inner_mig ">
+                LOUISE KREJLER
+            </div>
+        </div>
+        <h2 class="h2_mig reveal">Lidt om mig</h2>
+        <div class="two_columns reveal">
+            <div class="column1 reveal">
+                <p class="reveal"> Jeg hedder Louise og jeg er 22 år gammel. Jeg kommer fra Ballerup, men min mor valgte
+                    at vi skulle
+                    flytte til Gentofte da jeg gik i tiende klasse på efterskolen. Jeg gik derfor på Aurehøj Gymnasium
+                    og holdte derefter 2 gode sabbatår. Her arbejdede jeg på et håndarbejdsværksted for mennesker med
+                    nedsat funktionsevne. Der var fyldt med søde mennesker og jeg lærte rigtig meget af, at være der. I
+                    mellemtiden flyttede jeg hjemmefra til Valby i en lille 1 værelses. Efterfølgende er jeg flyttet til
+                    Amager og startede på Multimediedesigner her til august. Jeg har fået et studiejob på Jobindex hvor
+                    jeg hjælper med at designe deres jobannoncer. Her er jeg omringet af flere som er uddannet
+                    multimediedesigner og andre i samme slags branche. Det er helt vildt fedt at få lov til at få noget
+                    relevant sparring med dem og lære hvordan jeg kan bruge alt det jeg har lært i praksis. Udover det
+                    så elsker jeg at være sammen med mine venner. Ligegyldigt hvad vi laver hygger jeg mig altid med
+                    mine søde veninder. De er de vigtigste i mit liv, udover min familie hihi</p>
+            </div>
+            <div class="lulu_picture reveal">
+                <img src="img/IMG_6780.webp" alt="mig og maclulu">
+            </div>
+        </div>
+
+        <div id="web" class="scrolling_text reveal">
+            <div class="scrolling_text_inner_ux">
+                GRUNDLÆGGENDE WEB
+            </div>
+        </div>
+        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+        <h2 class="h2_portfolie reveal">Mit arbejde</h2>
+        <div class="two_columns reveal">
+            <div class="column1 reveal">
+                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
+                    nostrum voluptatibus
+                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
+                    Saepe
+                    dicta magnam porro!</p>
+            </div>
+        </div>
+
+        <div id="ux" class="scrolling_text reveal">
+            <div class="scrolling_text_inner_ux">
+                GRUNDLÆGGENDE UX
+            </div>
+        </div>
+        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+        <h2 class="h2_portfolie reveal">Mit arbejde</h2>
+        <div class="two_columns reveal">
+            <div class="column1 reveal">
+                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
+                    nostrum voluptatibus
+                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
+                    Saepe
+                    dicta magnam porro!</p>
+            </div>
+        </div>
+
+        <div id="animation" class="scrolling_text reveal">
+            <div class="scrolling_text_inner_animation">
+                GRUNDLÆGGENDE ANIMATION
+            </div>
+        </div>
+        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+        <h2 class="h2_portfolie reveal">Mit arbejde</h2>
+        <div class="two_columns reveal">
+            <div class="column1 reveal">
+                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
+                    nostrum voluptatibus
+                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
+                    Saepe
+                    dicta magnam porro!</p>
+            </div>
+        </div>
+
+        <div id="indhold" class="scrolling_text reveal">
+            <div class="scrolling_text_inner_animation">
+                GRUNDLÆGGENDE INDHOLD
+            </div>
+        </div>
+        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+        <h2 class="h2_portfolie reveal">Mit arbejde</h2>
+        <div class="two_columns reveal">
+            <div class="column1 reveal">
+                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
+                    nostrum voluptatibus
+                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
+                    Saepe
+                    dicta magnam porro!</p>
+            </div>
+        </div>
+
+    </div>
+
+
 
 
 
