--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
 
     <div class="scroll">
-        <div id="mig" class="scrolling_text_forside reveal">
-            <div class="scrolling_text_inner_mig ">
+        <div id="mig" class="reveal">
+            <h1 class="h1_portfolie reveal">
                 LOUISE KREJLER
-            </div>
+            </h1>
         </div>
         <h2 class="h2_mig reveal">Lidt om mig</h2>
         <div class="two_columns reveal">
@@ -66,9 +66,9 @@
         </div>
 
         <div id="web" class="scrolling_text reveal">
-            <div class="scrolling_text_inner_ux">
+            <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE WEB
-            </div>
+            </h1>
         </div>
         <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
         <h2 class="h2_portfolie reveal">Mit arbejde</h2>
@@ -83,9 +83,9 @@
         </div>
 
         <div id="ux" class="scrolling_text reveal">
-            <div class="scrolling_text_inner_ux">
+            <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE UX
-            </div>
+            </h1>
         </div>
         <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
         <h2 class="h2_portfolie reveal">Mit arbejde</h2>
@@ -100,9 +100,9 @@
         </div>
 
         <div id="animation" class="scrolling_text reveal">
-            <div class="scrolling_text_inner_animation">
+            <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE ANIMATION
-            </div>
+            </h1>
         </div>
         <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
         <h2 class="h2_portfolie reveal">Mit arbejde</h2>
@@ -117,9 +117,9 @@
         </div>
 
         <div id="indhold" class="scrolling_text reveal">
-            <div class="scrolling_text_inner_animation">
+            <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE INDHOLD
-            </div>
+            </h1>
         </div>
         <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
         <h2 class="h2_portfolie reveal">Mit arbejde</h2>
