--- a/ux.html
+++ b/ux.html
@@ -30,9 +30,9 @@
 
     <main>
         <div class="scrolling_text">
-            <div class="scrolling_text_inner_ux">
+            <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE UX
-            </div>
+            </h1>
         </div>
         <img class="portfolie_img" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
         <h2 class="h2_portfolie">Mit arbejde</h2>
