mobil venlig, menu og nye farver

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="logo">
             <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
         </div>
-        <nav>
+        <nav class="menu_container">
+            <button class="menu_button">Menu</button>
             <ul class="menu">
                 <li><a href="#mig" class="mig_menu">Om mig</a></li>
                 <li><a href="#web" class="web_menu">Web</a></li>
@@ -44,7 +45,7 @@
                 LOUISE KREJLER
             </h1>
         </div>
-        <h2 class="h2_mig reveal">Lidt om mig</h2>
+        <h2 class="h2_portfolie reveal">Lidt om mig</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Jeg hedder Louise og jeg er 22 år gammel. Jeg kommer fra Ballerup, men min mor valgte
@@ -65,7 +66,7 @@
             </div>
         </div>
 
-        <div id="web" class="scrolling_text reveal">
+        <div id="web" class="reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE WEB
             </h1>
