billeder og tekst ændring

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
+
     <link rel="stylesheet" href="style.css">
     <title>Forside</title>
 </head>
@@ -20,11 +22,12 @@
         <nav class="menu_container">
             <button class="menu_button">Menu</button>
             <ul class="menu">
-                <li><a href="#mig" class="mig_menu">Om mig</a></li>
-                <li><a href="#web" class="web_menu">Web</a></li>
-                <li><a href="#ux" class="ux_menu">UX</a></li>
-                <li><a href="#animation" class="animation_menu">Animation</a></li>
-                <li><a href="#indhold" class="indhold_menu">Indhold</a></li>
+                <li><a href="#mig" id="mig_menu">Om mig</a></li>
+                <li><a href="#web" id="web_menu">Web</a></li>
+                <li><a href="#ux" id="ux_menu">UX</a></li>
+                <li><a href="#animation" id="animation_menu">Animation</a></li>
+                <li><a href="#indhold" id="indhold_menu">Indhold</a></li>
+                <li><a href="#portfolio" id="portfolio_menu">Portfolie</a></li>
             </ul>
         </nav>
     </header>
@@ -42,7 +45,7 @@
     <div class="scroll">
         <div id="mig" class="reveal">
             <h1 class="h1_portfolie reveal">
-                LOUISE KREJLER
+                Louise Krejler
             </h1>
         </div>
         <h2 class="h2_portfolie reveal">Lidt om mig</h2>
@@ -62,7 +65,7 @@
                     mine søde veninder. De er de vigtigste i mit liv, udover min familie hihi</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/IMG_6780.webp" alt="mig og maclulu">
+                <img src="img/Skærmbillede 2023-01-08 kl. 20.01.40.png" alt="mig og maclulu">
             </div>
         </div>
 
@@ -72,48 +75,73 @@
             </h1>
         </div>
         <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
-        <h2 class="h2_portfolie reveal">Mit arbejde</h2>
+        <h2 class="h2_portfolie reveal">Website</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
-                    nostrum voluptatibus
-                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
-                    Saepe
-                    dicta magnam porro!</p>
+                <p class="reveal"> bla bla</p>
             </div>
+            <div class="lulu_picture reveal">
+                <img src="img/Skærmbillede 2023-01-08 kl. 23.04.15.png" alt="mig og maclulu">
+            </div>
+
+        </div>
+        <h2 class="h2_portfolie reveal">Emnesite</h2>
+        <div class="two_columns reveal">
+            <div class="column1 reveal">
+                <p class="reveal"> Under forløbet Grundlæggende Web lærte vi ... Temaopgaven bestod af, at designe og
+                    lave mit eget site om et valgtfit emne. Her valgte jeg at lave en site om mine yndlings blomster.
+                    Til denne site valgte jeg stilarten modernisme og herunder minimalisme. Min komposition består
+                    derfor at få elementer og et stærkt blikfandt med mine billeder og stor header. Udtrykket er
+                    harmonisk med simple former og rene kontrastfulde farver, minimalistisk med et dramatisk brug af
+                    typografi. Gestaltlovene kommer også til udtryk på mit site, blandt andet gennem loven om
+                    kontinuitet som jeg bruger med linjer som adskiller min tekst og billede. Loven om nærhed er også
+                    til stede hvis man kigger på placeringen af mine overskrifter og tekst nedenunder. Dette hjælper
+                    brugeres til at opfatte elementerne som relateret til hinanden. Sitet er opbygget med grids for
+                    effektivt at kunne organisere mit indhold, uden at skulle tilføje ekstra visuelle elementer.
+                    Billederne er på samme måde, som resten af sitet forsøgt at holde minimalistisk og enkle. Dette
+                    relaterer sig også til loven om lighed ved at alle mine sites ligner hinanden, med samme former,
+                    farver og størrelser.</p>
+            </div>
+            <div class="lulu_picture reveal">
+                <img src="img/Skærmbillede 2023-01-08 kl. 22.54.42.png" alt="">
+            </div>
+
         </div>
 
-        <div id="ux" class="scrolling_text reveal">
+        <div id=" ux" class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE UX
             </h1>
         </div>
         <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
-        <h2 class="h2_portfolie reveal">Mit arbejde</h2>
+        <h2 class="h2_portfolie reveal">Løsning</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
-                    nostrum voluptatibus
-                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
-                    Saepe
-                    dicta magnam porro!</p>
+                <p class="reveal"> bla bla </p>
+            </div>
+            <div class="lulu_picture reveal">
+                <img src="img/Skærmbillede 2023-01-08 kl. 23.37.06.png" alt="">
             </div>
         </div>
 
-        <div id="animation" class="scrolling_text reveal">
+        <div id=" animation" class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE ANIMATION
             </h1>
         </div>
         <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
-        <h2 class="h2_portfolie reveal">Mit arbejde</h2>
+        <h2 class="h2_portfolie reveal">Temaopgave</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
                     nostrum voluptatibus
-                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
+                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis
+                    quo.
                     Saepe
                     dicta magnam porro!</p>
+            </div>
+            <div class="lulu_picture reveal">
+                <img src="img/Skærmbillede 2023-01-08 kl. 23.55.16.png" alt="">
             </div>
         </div>
 
@@ -123,16 +151,56 @@
             </h1>
         </div>
         <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
-        <h2 class="h2_portfolie reveal">Mit arbejde</h2>
+        <h2 class="h2_portfolie reveal">Pilotsite</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
                     nostrum voluptatibus
-                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis quo.
+                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis
+                    quo.
                     Saepe
                     dicta magnam porro!</p>
             </div>
+            <div class="lulu_picture reveal">
+                <img src="img/Skærmbillede 2023-01-08 kl. 23.56.40.png" alt="">
+            </div>
+
         </div>
+        <h2 class="h2_portfolie reveal">Redesign</h2>
+        <div class="two_columns reveal">
+            <div class="column1 reveal">
+                <p class="reveal"> bla bla</p>
+            </div>
+            <div class="lulu_picture reveal">
+                <img src="img/Skærmbillede 2023-01-08 kl. 23.58.24.png" alt="">
+            </div>
+
+        </div>
+
+        <div id="portfolio" class="scrolling_text reveal">
+            <h1 class="h1_portfolie reveal">
+                PORTFOLIO EKSAMEN
+            </h1>
+        </div>
+        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+        <h2 class="h2_portfolie reveal">Portfolio eksamen</h2>
+        <div class="two_columns reveal">
+            <div class="column1 reveal">
+                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
+                    nostrum voluptatibus
+                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis
+                    quo.
+                    Saepe
+                    dicta magnam porro!</p>
+            </div>
+            <div class="lulu_picture reveal">
+                <img src="img/Skærmbillede 2023-01-09 kl. 00.08.39.png" alt="">
+            </div>
+        </div>
+
+    </div>
+
+
 
     </div>
 
