nye billeder + layout

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <div class="scroll">
         <div id="mig" class="reveal">
             <h1 class="h1_portfolie reveal">
-                Louise Krejler
+                Om mig
             </h1>
         </div>
-        <h2 class="h2_portfolie reveal">Lidt om mig</h2>
+        <h2 class="h2_portfolie reveal">Louise Krejler</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> Jeg hedder Louise og jeg er 22 år gammel. Jeg kommer fra Ballerup, men min mor valgte
@@ -74,7 +74,7 @@
                 GRUNDLÆGGENDE WEB
             </h1>
         </div>
-        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+
         <h2 class="h2_portfolie reveal">Website</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
@@ -106,22 +106,28 @@
                 <img src="img/Skærmbillede 2023-01-08 kl. 22.54.42.png" alt="">
             </div>
 
+
         </div>
+        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-09 kl. 00.39.28.png" alt="">
 
         <div id=" ux" class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE UX
             </h1>
         </div>
-        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+
         <h2 class="h2_portfolie reveal">Løsning</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
                 <p class="reveal"> bla bla </p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-08 kl. 23.37.06.png" alt="">
+                <img src="img/Skærmbillede 2023-01-09 kl. 00.42.14.png" alt="">
             </div>
+
+        </div>
+        <div class="lulu_picture reveal">
+            <img src="img/Skærmbillede 2023-01-09 kl. 00.43.00.png" alt="">
         </div>
 
         <div id=" animation" class="scrolling_text reveal">
@@ -129,7 +135,7 @@
                 GRUNDLÆGGENDE ANIMATION
             </h1>
         </div>
-        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+
         <h2 class="h2_portfolie reveal">Temaopgave</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
@@ -141,8 +147,11 @@
                     dicta magnam porro!</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-08 kl. 23.55.16.png" alt="">
+                <img src="img/Skærmbillede 2023-01-09 kl. 00.46.55.png" alt="">
             </div>
+        </div>
+        <div class="lulu_picture reveal">
+            <img src="img/Skærmbillede 2023-01-09 kl. 00.47.33.png" alt="">
         </div>
 
         <div id="indhold" class="scrolling_text reveal">
@@ -150,7 +159,7 @@
                 GRUNDLÆGGENDE INDHOLD
             </h1>
         </div>
-        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+
         <h2 class="h2_portfolie reveal">Pilotsite</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
@@ -172,9 +181,12 @@
                 <p class="reveal"> bla bla</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-08 kl. 23.58.24.png" alt="">
+                <img src="img/Skærmbillede 2023-01-09 kl. 00.51.43.png" alt="">
             </div>
 
+        </div>
+        <div class="lulu_picture reveal">
+            <img src="img/Skærmbillede 2023-01-09 kl. 00.53.21.png" alt="">
         </div>
 
         <div id="portfolio" class="scrolling_text reveal">
@@ -182,7 +194,7 @@
                 PORTFOLIO EKSAMEN
             </h1>
         </div>
-        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-07 kl. 11.00.14.png" alt="">
+
         <h2 class="h2_portfolie reveal">Portfolio eksamen</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
