--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
@@ -65,7 +65,7 @@
                     mine søde veninder. De er de vigtigste i mit liv, udover min familie hihi</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-08 kl. 20.01.40.png" alt="mig og maclulu">
+                <img src="img/mig.png" alt="mig og maclulu">
             </div>
         </div>
 
@@ -81,7 +81,7 @@
                 <p class="reveal"> bla bla</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-08 kl. 23.04.15.png" alt="mig og maclulu">
+                <img src="img/website.png" alt="mig og maclulu">
             </div>
 
         </div>
@@ -103,14 +103,14 @@
                     farver og størrelser.</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-08 kl. 22.54.42.png" alt="">
+                <img src="img/emnesite_1.png" alt="">
             </div>
 
 
         </div>
-        <img class="portfolie_img reveal" src="img/Skærmbillede 2023-01-09 kl. 00.39.28.png" alt="">
+        <img class="portfolie_img reveal" src="img/emnesite_2.png" alt="">
 
-        <div id=" ux" class="scrolling_text reveal">
+        <div id="ux" class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE UX
             </h1>
@@ -122,15 +122,15 @@
                 <p class="reveal"> bla bla </p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-09 kl. 00.42.14.png" alt="">
+                <img src="img/loesning_1.png" alt="">
             </div>
 
         </div>
         <div class="lulu_picture reveal">
-            <img src="img/Skærmbillede 2023-01-09 kl. 00.43.00.png" alt="">
+            <img src="img/loesning_2.png" alt="">
         </div>
 
-        <div id=" animation" class="scrolling_text reveal">
+        <div id="animation" class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE ANIMATION
             </h1>
@@ -147,11 +147,11 @@
                     dicta magnam porro!</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-09 kl. 00.46.55.png" alt="">
+                <img src="img/temaopgave_1.png" alt="">
             </div>
         </div>
         <div class="lulu_picture reveal">
-            <img src="img/Skærmbillede 2023-01-09 kl. 00.47.33.png" alt="">
+            <img src="img/temaopgave_2.png" alt="">
         </div>
 
         <div id="indhold" class="scrolling_text reveal">
@@ -171,7 +171,7 @@
                     dicta magnam porro!</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-08 kl. 23.56.40.png" alt="">
+                <img src="img/pilotsite.png" alt="">
             </div>
 
         </div>
@@ -181,12 +181,12 @@
                 <p class="reveal"> bla bla</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-09 kl. 00.51.43.png" alt="">
+                <img src="img/redesign_1.png" alt="">
             </div>
 
         </div>
         <div class="lulu_picture reveal">
-            <img src="img/Skærmbillede 2023-01-09 kl. 00.53.21.png" alt="">
+            <img src="img/redesign_2.png" alt="">
         </div>
 
         <div id="portfolio" class="scrolling_text reveal">
@@ -206,19 +206,11 @@
                     dicta magnam porro!</p>
             </div>
             <div class="lulu_picture reveal">
-                <img src="img/Skærmbillede 2023-01-09 kl. 00.08.39.png" alt="">
+                <img src="img/portfolio.png" alt="">
             </div>
         </div>
 
     </div>
-
-
-
-    </div>
-
-
-
-
 
     <script src="script.js"></script>
 </body>
