ryddet op i html og css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="scroll">
         <div id="mig" class="reveal">
-            <h1 class="h1_portfolie reveal">
+            <h1 class="h1_portfolie_mig reveal">
                 Om mig
             </h1>
         </div>
@@ -64,8 +64,8 @@
                     så elsker jeg at være sammen med mine venner. Ligegyldigt hvad vi laver hygger jeg mig altid med
                     mine søde veninder. De er de vigtigste i mit liv, udover min familie hihi</p>
             </div>
-            <div class="lulu_picture reveal">
-                <img src="img/mig.png" alt="mig og maclulu">
+            <div class="portfolie_img  reveal">
+                <img src="img/mig.png" alt="mig">
             </div>
         </div>
 
@@ -80,8 +80,8 @@
             <div class="column1 reveal">
                 <p class="reveal"> bla bla</p>
             </div>
-            <div class="lulu_picture reveal">
-                <img src="img/website.png" alt="mig og maclulu">
+            <div class="portfolie_img  reveal">
+                <img src="img/website.png" alt="website">
             </div>
 
         </div>
@@ -102,7 +102,7 @@
                     relaterer sig også til loven om lighed ved at alle mine sites ligner hinanden, med samme former,
                     farver og størrelser.</p>
             </div>
-            <div class="lulu_picture reveal">
+            <div class="portfolie_img  reveal">
                 <img src="img/emnesite_1.png" alt="">
             </div>
 
@@ -121,12 +121,12 @@
             <div class="column1 reveal">
                 <p class="reveal"> bla bla </p>
             </div>
-            <div class="lulu_picture reveal">
+            <div class="portfolie_img reveal">
                 <img src="img/loesning_1.png" alt="">
             </div>
 
         </div>
-        <div class="lulu_picture reveal">
+        <div class="portfolie_img reveal">
             <img src="img/loesning_2.png" alt="">
         </div>
 
@@ -146,11 +146,11 @@
                     Saepe
                     dicta magnam porro!</p>
             </div>
-            <div class="lulu_picture reveal">
+            <div class="portfolie_img reveal">
                 <img src="img/temaopgave_1.png" alt="">
             </div>
         </div>
-        <div class="lulu_picture reveal">
+        <div class="portfolie_img reveal">
             <img src="img/temaopgave_2.png" alt="">
         </div>
 
@@ -170,7 +170,7 @@
                     Saepe
                     dicta magnam porro!</p>
             </div>
-            <div class="lulu_picture reveal">
+            <div class="portfolie_img reveal">
                 <img src="img/pilotsite.png" alt="">
             </div>
 
@@ -180,12 +180,12 @@
             <div class="column1 reveal">
                 <p class="reveal"> bla bla</p>
             </div>
-            <div class="lulu_picture reveal">
+            <div class="portfolie_img reveal">
                 <img src="img/redesign_1.png" alt="">
             </div>
 
         </div>
-        <div class="lulu_picture reveal">
+        <div class="portfolie_img reveal">
             <img src="img/redesign_2.png" alt="">
         </div>
 
@@ -205,7 +205,7 @@
                     Saepe
                     dicta magnam porro!</p>
             </div>
-            <div class="lulu_picture reveal">
+            <div class="portfolie_img reveal">
                 <img src="img/portfolio.png" alt="">
             </div>
         </div>
